<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="drawer_open">Open</string>
    <string name="app_name">JudgingApp</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_add_athlete">Add Athlete</string>
    <string name="title_select_athlete">Select Athlete</string>
    <string name="title_judge_sheet">Judge Sheet</string>
    <string name="drawer_close">Close</string>
    <string name="foto_label">Enviar foto</string>
    <string name="name_label">Name:</string>
    <string name="age_label">Age:</string>
    <string name="front_foot_label">Front Foot:</string>
    <string name="category_label">Category:</string>
    <string name="country_label">Country:</string>
    <string name="button_save">Save</string>
    <string-array name="category_array">
        <item>Open Division (Open Men)</item>
        <item>Open Division (Open Women)</item>
        <item>U14 – 14 and Under (Boys)</item>
        <item>U14 – 14 and Under (Girls)</item>
        <item>U18 – 18 years and Under (Junior Men)</item>
        <item>U18 – 18 years and Under (Junior Women)</item>
        <item>O30 – 30 Years and Over (Master Men)</item>
        <item>O30 – 30 Years and Over (Master Women)</item>
        <item>O40 – 40 Years and Over (Veteran Men)</item>
        <item>O40 – 40 Years and Over (Veteran Women)</item>
    </string-array>
    <string-array name="frontfoot_array">
        <item>Right</item>
        <item>Left</item>
    </string-array>
    <string-array name="country_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Faeroe Islands</item>
        <item>Falkland Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>Former Yugoslav Republic of Macedonia</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Marianas</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Sqo Tome and Principe</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>The Bahamas</item>
        <item>The Gambia</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string-array name="category_array_plus_all">
        <item>All Categories</item>
        <item>Open Division (Open Men)</item>
        <item>Open Division (Open Women)</item>
        <item>U14 – 14 and Under (Boys)</item>
        <item>U14 – 14 and Under (Girls)</item>
        <item>U18 – 18 years and Under (Junior Men)</item>
        <item>U18 – 18 years and Under (Junior Women)</item>
        <item>O30 – 30 Years and Over (Master Men)</item>
        <item>O30 – 30 Years and Over (Master Women)</item>
        <item>O40 – 40 Years and Over (Veteran Men)</item>
        <item>O40 – 40 Years and Over (Veteran Women)</item>
    </string-array>
    <string name="athlete_label">Athlete:</string>
    <string name="history">Tricks History</string>
    <string name="raleys">Raleys</string>
    <string name="tantrums">Tantrums</string>
    <string name="rolls">Rolls</string>
    <string name="execution">Execution</string>
    <string name="intensity">Intensity</string>
    <string name="composition">Composition</string>
    <string name="fall_button">FALL</string>
    <string name="finish_button">Finish Judging</string>
    <string name="confirm_trick_stats">Confirm Trick Stats</string>
    <string name="trick_name">Trick Name:</string>
    <string name="trick_height">Height:</string>
    <string name="blank">(Blank)</string>
    <string name="trick_wave">Wave:</string>
    <string name="trick_define_heitght">Define Height</string>
    <string name="trick_define_wave">Define Wave</string>
    <string name="cancel_button" tools:ignore="ButtonCase">CANCEL</string>
    <string name="confirm_button">CONFIRM</string>
    <string name="trick_height_high">High</string>
    <string name="trick_height_medium">Medium</string>
    <string name="trick_height_down">Down</string>
    <string name="trick_wave_left">Left</string>
    <string name="trick_wave_up">Top</string>
    <string name="trick_wave_right">Right</string>
    <string name="category_filter">Filter by Category:</string>
    <string name="inverts">Inverts:</string>
    <string name="rotations">Rotations:</string>
    <string name="mobes">Mobes:</string>
    <string name="off_axis">OFF-AXIS</string>
    <string name="wrapped">WRAPPED</string>
    <string name="switchButton">SWITCH</string>
    <string name="fall">FALL</string>
    <string name="select_grab">Select Grab:</string>
    <string name="nose">Nose</string>
    <string name="crail">Crail</string>
    <string name="tail">Tail</string>
    <string name="mute">Mute</string>
    <string name="indy">Indy</string>
    <string name="tindy">Tindy</string>
    <string name="method">Method</string>
    <string name="stalefish">Stalefish</string>
    <string name="tailfish">Tailfish</string>
</resources>