<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="850dp"
        android:layout_height="450dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/popup_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/grab_tail"
            app:layout_constraintStart_toEndOf="@+id/grab_nose"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/prancha"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/grab_tail"
            android:layout_width="45dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/grab_nose"
            android:layout_width="45dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:text="@string/nose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/grab_method_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:text="@string/method"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/grab_crail_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/crail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/grab_mute_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:text="@string/mute"
            app:layout_constraintStart_toEndOf="@+id/grab_crail_goofy"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/grab_indy_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/indy"
            app:layout_constraintStart_toEndOf="@+id/grab_mute_goofy"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/grab_tindy_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="212dp"
            android:text="@string/tindy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grab_indy_goofy"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/select_grab"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/grab_method2_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:text="@string/method"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/grab_method_goofy" />

        <Button
            android:id="@+id/grab_stalefish_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/stalefish"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/grab_method2_goofy" />

        <Button
            android:id="@+id/grab_tailfish_goofy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="202dp"
            android:text="@string/tailfish"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grab_stalefish_goofy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>