<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.add_athlete.AddAthleteFragment">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="75dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/foto_label"
            android:orientation="vertical"
            android:src="@drawable/foto_input" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_label" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/age_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_label" />

            <EditText
                android:id="@+id/age_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/front_foot_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_foot_label" />

            <Spinner
                android:id="@+id/spinnerFront_Foot"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_label" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/country_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_label" />

            <Spinner
                android:id="@+id/spinnerCountry"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:text="@string/button_save" />

    </LinearLayout>

</ScrollView>